--- a/src/css/grids.css
+++ b/src/css/grids.css
@@ -1,22 +1,26 @@
 .grid-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 3fr 2fr 1fr;
+    grid-template-rows: 1fr 4fr 3fr 2fr;
     height: 100vh;
 }
 
-
+#menu{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
 #canvas{
-    grid-area: "canvas";
+   
+    
 }
 #inspector{
-    grid-area: "inspector";
+    
 }
 #transforms{
-    grid-area: "transforms";
+    
     grid-column: 1/3;
 }
 #codes{
-    grid-area: "codes";
+   
     grid-column: 1/3;
 }
